<resources>
    <string name="app_name">ChiChi</string>
    <string name="action_settings">Settings</string>
    <string name="version">3.0</string>
    <string-array name="country_arrays">
        <item>country</item>
        <item>I.R.Iran</item>
    </string-array>
    <string-array name="gender_arrays">
        <item />
        <item>Male</item>
        <item>Femail</item>
    </string-array>
    <string-array name="nav_drawer_labels">
        <item>My Home</item>
        <item>C Planet</item>
        <item>Writings</item>
        <item>My Notification</item>
        <item>My Friends</item>
        <item>Search</item>
        <item>Find friend</item>
        <item>My Settings</item>
    </string-array>
    <string-array name="setting_drawer_items">
        <item>Manage Blocks</item>
        <item>My Daric coins</item>
        <item>Advertisement</item>
        <item>About ChiChi</item>
        <item>Support</item>
        <item>Policies</item>
        <item>logout</item>

    </string-array>
    <string-array name="tags_arrays">
        <item>all</item>
        <item>Personal</item>
        <item>humor</item>
        <item>educational</item>
        <item>fun</item>
        <item>religious</item>
        <item>policy</item>
        <item>events</item>
        <item>Nature</item>
        <item>Animals</item>
        <item>other</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Women</item>
        <item>Health</item>
        <item>children</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="about">About ChiChi</string>
    <string name="ChiChi_Group">ChiChi Group</string>
    <string name="gift_for_God">A gift for God</string>
    <string name="best">Best</string>
    <string name="post">Post</string>
    <string name="comment">Comment</string>
    <string name="send">Send</string>
    <string name="Edit_information">Edit Information</string>
    <string name="name">Name</string>
    <string name="speech">Speech</string>
    <string name="Private_information">Private Informations</string>
    <string name="email">Email</string>
    <string name="exdate">This version of ChiChi extinct. Download the new version. Thank you:-)</string>
    <string name="download">Download</string>
    <string name="refresh">Refresh</string>
    <string name="manage_block">Manage Blocks</string>
    <string name="manage_friend">Manage Friends</string>
    <string name="write">Write</string>
    <string name="text">Text…</string>
    <string name="selectpic">Select Picture</string>
    <string name="cancel">Cancel</string>
    <string name="notification">Notification</string>
    <string name="contactuser">My Contact Users</string>
    <string name="insertphone">Please,Insert your Phone number.you will set us a SMS</string>
    <string name="insertname">Congratulations:-) you are a new ChiChi member.Please insert your name.</string>
    <string name="insertsmscode">We sent you your login Code with SMS .Please enter the received code.</string>
    <string name="insertusername">set your username.</string>
    <string name="smscodenotresived">Did not receive SMS? Click.</string>
    <string name="Select_friend">Select a friend.</string>
    <string name="Select_tag">Select a tag</string>
    <string name="Selectfriend">Select friend</string>
    <string name="Send_to">Send to</string>
    <string name="setting">Settings</string>
    <string name="logout">Log Out</string>
    <string name="insertfusername">Enter your friend\'s username.</string>
    <string name="fusernamef">Find friends with username</string>
    <string name="add">add</string>
    <string name="errorconection">Check your Intenet connection.</string>
    <string name="errorcomment">Write your comment</string>
    <string name="loadmore">Load more</string>
    <string name="errorfunblock">First unblock this person.</string>
    <string name="errorblock">Sorry,This person has blocked you.</string>
    <string name="succes">Successfully done.</string>
    <string name="errorproblem">a unknown problem happened</string>
    <string name="errorrname">Your name must be between five to twenty characters.</string>
    <string name="errorusername">Your username must be between five to twenty characters.</string>
    <string name="erroremail">Invalid email</string>
    <string name="errorusernameset">Invalid username</string>
    <string name="username">Username</string>
    <string name="phonecontact">Phone Contacts</string>
    <string name="makefriend">Find friends</string>
    <string name="onback">Press once again to exit</string>
    <string name="errorwrite">Write your post or upload an image.</string>
    <string name="errorwrite_writings">Write your Writing.</string>
    <string name="takecamera">Take from camera</string>
    <string name="takegallery">Select from gallery</string>
    <string name="completeaction">Complete action using</string>
    <string name="uploadingfile">Uploading file…</string>
    <string name="uploadingstart">uploading started…</string>
    <string name="errorappcropfind">Can not find image crop app</string>
    <string name="sourcefilenotexist">Source File not exist</string>
    <string name="selected">Selected</string>
    <string name="newest">The Newest</string>
    <string name="planet">C Planet</string>
    <string name="writings">The Writings</string>
    <string name="blocked">Blocked</string>
    <string name="unblocked">Unblocked</string>
    <string name="selectcountry">Select your country</string>
    <string name="errorphone">Enter your ten-digit phone number without the zero. example: 9012345678</string>
    <string name="code4">code is Four-digit</string>
    <string name="wrongcode">Code is wrong</string>
    <string name="lockingyourself">Are you looking for yourself?</string>
    <string name="errorfusername">This username does not exist.</string>
    <string name="wasfriend">this person was in your friends list.</string>
    <string name="usernamealreadytaken">This username is already taken. choose a different username</string>
    <string name="delete">Delete</string>
    <string name="Share">Share the text</string>
    <string name="managepost">manage the post</string>
    <string name="unblock">Unblock</string>
    <string name="block">Block</string>
    <string name="manageblockedpersin">Manage the blocked person</string>
    <string name="managecomment">Manage your comment</string>
    <string name="managefriend">Manage your friend</string>
    <string name="newcomment">A new comment:</string>
    <string name="newlike">A new like</string>
    <string name="newtag">mentioned you.</string>
    <string name="newfollower">A new follower</string>
    <string name="hide">Hide</string>
    <string name="loading">Loading…</string>
    <string name="blockunblock">Block/Unblock</string>
    <string name="daric">My Daric coins</string>
    <string name="whatsdaric">The daric was a gold coin used within the Persian Empire. Cyrus the Great  introduced coins to the Persian Empire after 546 BC. Darius I  introduced a thick gold coin which he named after himself\, the daric\, which had a standard weight of 8.4 grams. The gold used in the coins was of very high quality with a purity of 95.83% and it bore the image of the Persian king or a great warrior armed with a bow and arrow. Their use ended with Alexander the Great\'s invasion in 330 BC. Upon the invasion of Persia by Alexander they were melted down and recoined as coins of Alexander. This is believed to be the main reason for their rarity in spite of their widespread usage at the time.</string>
    <string name="onemin">Please wait a moment</string>
    <string name="errorresivesms">A SMS sent from your phone but did not receive.Cause: The number you entered is incorrect or The problem is from your operator</string>
    <string name="errorsendsms">SMS faild, please try again later!</string>
    <string name="advertise">Advertisement</string>
    <string name="advertise_plus">New Advertise</string>
    <string name="advertise_name">Advertise name</string>
    <string name="advertise_link">Advertise link</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="phonedaric">Insert the phone number which you paid with that</string>
  <string name="verifydarictext">First, click on the pay.after pay click on verify transaction.
Note verify the transaction immediately after pay, otherwise we do not know you paid
Keep USSD code till end up paying Because its your payment document.</string>
    <string name="pay">Pay</string>
    <string name="verifydaric">Verify transaction</string>
    <string name="erroradvertiseinput">Ad name and picture and link all three need to be entered</string>
    <string name="check">Check</string>
    <string name="checkadvertise">Is your ad send to check the content?</string>
    <string name="wait">Please,waiting</string>
    <string name="no_app">Program to open this link not found</string>
    <string name="inputdaricamount">Enter the number of coins you want</string>
    <string name="tellerror">Tell us the error code:</string>
    <string name="logouterror">Do you want to sign out from your account?</string>
    <string name="phonenumber">Phone number</string>
    <string name="errorphonenumber">The phone number is not correct</string>
    <string name="errorinpays">Such this transaction is not in the system or has not been successful</string>
    <string name="errorinconnect">Error in connection with the payment gateway.Try again</string>
    <string name="delete_dialog">Are you sure to delete?</string>
    <string name="pay_dialog">10 coins must pay.Tap on Yes.</string>
    <string name="advertisemanage">Advertise management</string>
    <string name="edit">Edit</string>
    <string name="saved">Saved</string>
    <string name="checking">Checking</string>
    <string name="checked">Checked and accepted</string>
    <string name="payed">Paid</string>
    <string name="active">Active(show)</string>
    <string name="activated">Activated</string>
    <string name="disactive">Disactive</string>
    <string name="deactivated">Deactivated</string>
    <string name="rejected">Rejected</string>
    <string name="link">Link</string>
    <string name="report_inappropriate">Report inappropriate</string>
    <string name="report_inappropriate_askdetails">If you would like say why you are reporting this</string>
    <string name="report_inappropriate_saved">Thanks.Your report saved</string>
    <string name="report_inappropriate_errorsaved">You\'ve already reported</string>
    <string name="search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="buy_daric">Buy Daric</string>
    <string name="support">Support</string>
    <string name="subject">Subject</string>
    <string name="feedback">Your feedback</string>
    <string name="insertfeedback">Please insert your feedback.</string>
    <string name="insertemail">Enter your e-mail.</string>
    <string name="insertemailcode">Enter the code sent to your email.</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="writings_notic">* Your Writing will be published after confirmation</string>
    <string name="hi_def">Hi dear:-)</string>
</resources>