<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/chi1_"
    android:orientation="vertical">


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignBottom="@+id/ok"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:enabled="false"
        android:text="@string/advertise_plus" />


    <ImageButton
        android:id="@+id/send"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/tick_icon" />


    <ImageButton
        android:id="@+id/back"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_above="@+id/myScrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/send"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:visibility="invisible" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1">


        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="358dp">

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/advertise_name"
                android:singleLine="true"
                android:textColor="?attr/colorPrimary">

                <requestFocus />
            </EditText>


            <Button
                android:id="@+id/cancell"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignBottom="@+id/select"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text"
                android:layout_toRightOf="@+id/button2"
                android:background="@drawable/button_white"
                android:text="@string/cancel"
                android:visibility="invisible" />


            <Button
                android:id="@+id/select"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text"
                android:layout_toLeftOf="@+id/button2"
                android:background="@drawable/button_white"
                android:text="@string/selectpic" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_centerHorizontal="true" />


            <ImageView
                android:id="@+id/uploadimage"
                android:layout_width="285dp"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/cancell"
                android:layout_marginTop="5dp"
                android:background="?attr/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/camera_icon" />

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/uploadimage"
                android:layout_marginTop="10dp"
                android:background="?attr/colorPrimary"
                android:scaleType="fitCenter"
                android:src="@drawable/link" />


            <EditText
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignBottom="@+id/imageButton1"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/imageButton1"
                android:layout_toRightOf="@+id/imageButton1"
                android:ems="10"
                android:hint="@string/advertise_link"
                android:inputType="textUri"
                android:textColor="?attr/colorPrimary">


            </EditText>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>