<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/chi1_"
    android:orientation="vertical">


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignBottom="@+id/ok"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:enabled="false"
        android:text="@string/write" />


    <ImageButton
        android:id="@+id/send"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/tick_icon" />


    <ImageButton
        android:id="@+id/back"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignLeft="@+id/send"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:visibility="invisible" />

    <Spinner
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:background="?attr/colorPrimary"
        android:visibility="visible"
        android:layout_below="@+id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:entries="@array/tags_arrays"
        android:focusable="true" />


    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:ems="10"
        android:hint="@string/text"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textColor="?attr/colorPrimary"
        android:layout_below="@+id/tags" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/writings_notic"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

</RelativeLayout>
