<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/chi1_"
    android:orientation="vertical">


    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:enabled="false"
        android:text="Buy Daric" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/myScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button1">


        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="446dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:scrollbars="vertical"
                android:text="@string/verifydarictext"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/ussd"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="USSD"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <Button
                android:id="@+id/pay"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ussd"
                android:layout_marginTop="26dp"
                android:background="@drawable/button_white"
                android:text="@string/pay"
                android:textColor="?attr/colorPrimary" />


            <Button
                android:id="@+id/verify"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/pay"
                android:layout_marginTop="26dp"
                android:background="@drawable/button_white"
                android:text="@string/verifydaric"
                android:textColor="?attr/colorPrimary" />

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/verify"
                android:layout_centerHorizontal="true"
                android:background="?attr/colorPrimary"
                android:visibility="invisible" />

        </RelativeLayout>

    </ScrollView>


    <ImageButton
        android:id="@+id/back"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="?attr/actionBarSize"
        android:layout_above="@+id/myScrollView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/back" />

</RelativeLayout>